# pants-dependency-sanitizer

./: .dockerignore  Cargo.toml  Dockerfile  README.MD
src/: cleaner.rs  main.rs
src/cleaner/: deps_manager.rs  mod.rs
src/sanitizer/: deps_manager.rs  mod.rs
