[package]
name = "pants-dependency-sanitizer"
version = "0.2.2"
authors = ["C.Solovev <constantine.solovev@gmail.com>"]
edition = "2018"

[dependencies]

# CLI
structopt = "0.3.15"
# Serialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

walkdir = "2"
regex = "1.3.9"

[profile.release]
lto = true

[[bin]]
name = "dep-sanitizer"
path = "src/main.rs"